fix spacing and font-eight of button

--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -35,6 +35,7 @@
           display: flex;
           flex-wrap: wrap;
           gap: 20px;
+          justify-content: space-around;
 
           .formInput {
             width: 40%;
@@ -42,7 +43,7 @@
             label {
               display: flex;
               align-items: center;
-              gap: 10px;
+              gap: 30px;
 
               .icon {
                 cursor: pointer;
@@ -63,6 +64,9 @@
             border: none;
             background-color: teal;
             color: white;
+            cursor: pointer;
+            font-weight: bold;
+            margin-top: 10px;
           }
         }
       }
